# zaawansowane-cpp

./: .gitignore  CMakeLists.txt  README.md  class_diagram.puml
include/: BinaryGameSaver.h  GameState.h  HammingDistance.h  HammingDistance.tpp  IGameSaver.h  IHeuristic.h  IPuzzleView.h  InputMode.h  InputModeHandler.h  LookAhead.h  LookAhead.tpp  ManhattanDistance.h  ManhattanDistance.tpp  MoveAdvisor.h  MoveAdvisor.tpp  PathResolver.h  PuzzleConcepts.h  PuzzleEngine.h  PuzzleEngine.tpp  PuzzlePresenter.h  TextGameSaver.h  TuiRenderer.h  UndoRedo.h  UndoRedoManager.h
include/ui/: ControlsPanelRenderer.h  GameLayoutComposer.h  GridRenderer.h  MessagePanelRenderer.h  StatsPanelRenderer.h  TileRenderer.h
src/: BinaryGameSaver.cpp  Board.h  GameStats.h  HammingDistance.cpp  InputModeHandler.cpp  LookAhead.cpp  ManhattanDistance.cpp  MoveAdvisor.cpp  PathResolver.cpp  Property.h  PuzzleEngine.h  PuzzlePresenter.cpp  TextGameSaver.cpp  TuiRenderer.cpp  UndoRedo.cpp  UndoRedoManager.cpp  main.cpp  test_engine.cpp  test_stats.cpp
src/ui/: ControlsPanelRenderer.cpp  GameLayoutComposer.cpp  GridRenderer.cpp  MessagePanelRenderer.cpp  StatsPanelRenderer.cpp  TileRenderer.cpp
tests/: debug_moveadvisor.cpp  debug_moveadvisor_verbose.cpp  debug_two_moves.cpp  find_two_move_board.cpp  test_concepts.cpp  test_engine.cpp  test_game_layout_composer.cpp  test_gamesaver.cpp  test_grid_renderer.cpp  test_heuristics.cpp  test_moveadvisor.cpp  test_textgamesaver.cpp  test_tile_renderer.cpp  test_tuirenderer.cpp  test_ui_components.cpp  test_undoredomanager.cpp
